--- a/.storybook/DocumentationTemplate.mdx
+++ b/.storybook/DocumentationTemplate.mdx
@@ -7,7 +7,9 @@ import { Meta, Title, Primary, Controls, Stories } from '@storybook/blocks';
 This module can be run locally as its own application. Just download, install, build, and run. To import into another application you should be able to:
 
 ```
-import ElectoralCollege from 'electoral-college';
+import ElectoralCollege from 'electoral-college/dist/cjs';
+// Or
+import ElectoralCollege form 'electoral-college/dist/esm';
 ```
 
 # Props
