fix: fixing package size

--- a/.storybook/DocumentationTemplate.mdx
+++ b/.storybook/DocumentationTemplate.mdx
@@ -31,7 +31,7 @@ import ElectoralCollege form 'electoral-college/dist/esm';
 ```js
 [
   {
-    name: string; // e.g. "Biden"
+    name: string; // e.g. "Harris"
     party: string; // e.g. "dem" -- notice it is lowercased
   },
 ]
