fix: remove sourcemap:true from rollup.config.js

--- a/.storybook/DocumentationTemplate.mdx
+++ b/.storybook/DocumentationTemplate.mdx
@@ -50,6 +50,12 @@ So I removed the styles from Storybook.
 
 If needed you can copy all the styles from `electoral-college/src/style.scss' into your application.
 
+# Types
+
+You can try configuring your `tsconfig.json` to look for the exported types from this package.
+You can also manually create a (or add to an existing) `.d.ts` file and copy the contents of the
+exported types in `/dist/types.d.ts`.
+
 ## Winner-Take-All / Current System
 
 ### Using the Map
