--- a/.storybook/DocumentationTemplate.mdx
+++ b/.storybook/DocumentationTemplate.mdx
@@ -52,9 +52,8 @@ If needed you can copy all the styles from `electoral-college/src/style.scss' in
 
 # Types
 
-You can try configuring your `tsconfig.json` to look for the exported types from this package.
-You can also manually create a (or add to an existing) `.d.ts` file and copy the contents of the
-exported types in `/dist/types.d.ts`.
+You can try configuring your `tsconfig.json` to look for the exported types from this package (`/dist/types.d.ts` -- haven't gotten this to work).
+You can also manually create a (or add to an existing) `.d.ts` file and declare a module.
 
 ## Winner-Take-All / Current System
 
@@ -98,7 +97,7 @@ Click the `Save` button. This will save the results to localStorage. The next ti
 
 ## Clearing Results
 
-Click the `Clear` button. This will clear the current results as well as your localStorage data.
+Click the `Clear` button (shows only if data has previously been saved). This will clear the current results as well as your localStorage data.
 
 # Screenshots
 
