docs: DocumentationTemplate had old information

--- a/.storybook/DocumentationTemplate.mdx
+++ b/.storybook/DocumentationTemplate.mdx
@@ -4,7 +4,7 @@ import { Meta, Title, Primary, Controls, Stories } from '@storybook/blocks';
 
 # How To Use This Module
 
-This module can be run locally as its own application. Just download, install, build, and run. To import into another application you should be able to:
+As of 3.x this module is now a true npm module that can be imported into and used in any application.
 
 ```
 import ElectoralCollege from 'electoral-college/dist';
