fix: saved vote percentages were not rendering

--- a/.storybook/DocumentationTemplate.mdx
+++ b/.storybook/DocumentationTemplate.mdx
@@ -17,6 +17,7 @@ You are free to pick whatever candidate you want as the Independent candidate, b
 E.g. for 2024 there are many polling companies conducting 5-way polls that include two Independents -- Robert F. Kennedy, Jr. and Cornell West.
 These polls do not include the Libertarian Party candidate Chase Oliver but do include the Green Party candidate Jill Stein.
 Robert F. Kennedy, Jr. is polling much higher than Cornell West but you can choose to include West as the Independent candidate, if you want, instead of Kennedy, Jr.
+Even though Kennedy, Jr. has endorsed Trump I am keeping him here because he is still on the ballot in many states and would likely receive more votes than West.
 
 ```
 import ElectoralCollege from 'electoral-college/dist';
